client/src/pages/Calendar.css
/* CalendarScreen.css */
.calendar-screen {
    font-family: 'Poppins', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #189ab4;
    text-align: center;
    padding: 20px;
    width: 100%;
    flex-direction: column;
}

.calendar-table {
    width: 100%;
    border-collapse: collapse;
    margin-bottom: 20px;
}

.calendar-table th,
.calendar-table td {
    border: 1px solid #ddd;
    padding: 20px;
    text-align: center;
    cursor: pointer;
    font-size: 18px;
}

.calendar-table td:hover {
    background-color: #f0f0f0;
}

.month-navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.month-navigation h2 {
    font-size: 24px;
    color: white;
}

.month-navigation button {
    padding: 10px 20px;
    font-size: medium;
    border: none;
    color: #189ab4;
    background-color: white;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s;
    width: 150px;
}

.month-navigation button:hover {
    background-color: #0f7b8e;
    color: white;
}

.summary-statistics {
    margin-top: 20px;
}

.summary-statistics h3 {
    font-size: 20px;
    color: white;
}

.summary-statistics p {
    font-size: 16px;
    margin: 5px 0;
    color: white;
}

.calendar-table td {
    text-align: center;
    font-size: 24px;
}

